--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "editor.experimental.pasteActions.enabled": true,
     "cSpell.words": [
         "Raleway",
+        "RGBO",
         "Roboto"
     ]
 }
